--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -23,7 +23,7 @@
   position: absolute;
   background: #099;
   outline: 1px solid blue;
-  transition: transform .6s, top .6s, left .6s, width .6s, height .6s;
+  transition: transform 0.6s, top 0.6s, left 0.6s, width 0.6s, height 0.6s;
   color: white;
   padding: 2%;
 }
@@ -38,31 +38,31 @@
   grid-area: controls;
 }
 
-.layout-playground  .parameter-controls .label {
+.layout-playground .parameter-controls .label {
   text-align: right;
-  padding: .4em;
+  padding: 0.4em;
   background: #ccc;
   border-bottom: 3px solid white;
   border-radius: 8px 0 0 8px;
   font-weight: bold;
 }
 
-.layout-playground  .parameter-controls .helper {
+.layout-playground .parameter-controls .helper {
   font-weight: normal;
   font-size: 80%;
 }
 
-.layout-playground  .parameter-controls .value {
-  padding: .4em;
+.layout-playground .parameter-controls .value {
+  padding: 0.4em;
   background: #eee;
   border-bottom: 3px solid white;
 }
 
-.layout-playground  .parameter-controls input[type="number"] {
+.layout-playground .parameter-controls input[type="number"] {
   width: 4em;
 }
 
-.layout-playground  .parameter-controls .xyrange .vertical {
+.layout-playground .parameter-controls .xyrange .vertical {
   appearance: slider-vertical;
   width: 2em;
 }
@@ -72,6 +72,13 @@
   background: #333;
   font-weight: bold;
   color: #9c9;
+  position: relative;
+}
+
+.layout-playground .copy {
+  position: absolute;
+  right: 2px;
+  top: 2px;
 }
 
 .layout-playground .code .indent {
